k8s/demo/gitops/real-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: real-app
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: real-app
  template:
    metadata:
      labels:
        app: real-app
    spec:
      containers:
        - name: app
          image: 057773388128.dkr.ecr.eu-north-1.amazonaws.com/eks-real-app
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
